--- a/public/styles/page/headerFooter.module.scss
+++ b/public/styles/page/headerFooter.module.scss
@@ -34,14 +34,25 @@
 		color: common.$colors-black;
 	}
 
-	display: grid;
-	grid-template-columns: 2fr 8fr auto;
 	position: fixed;
+	display: flex;
+	flex-wrap: wrap;
 	z-index: 500;
 	width: 100%;
 	background-color: common.$colors-smoke-white;
 	opacity: 0.95;
 
+	@include common.responsive-print-only() {
+		display: none;
+	}
+}
+
+.top-menu-logo-container {
+	flex: 2;
+	min-width: 250px;
+	position: relative;
+
+	// Keep the top menu height parameters here and not directly on the header element. This allows the menu to expand.
 	@include common.responsive-desktop-only() {
 		height: 70px;
 	}
@@ -54,17 +65,6 @@
 		height: 55px;
 	}
 
-	@include common.responsive-print-only() {
-		display: none;
-	}
-}
-
-.top-menu-logo-container {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	position: relative;
-
 	& > img {
 		cursor: pointer;
 		object-fit: contain;
@@ -76,13 +76,13 @@
 		right: 30px;
 	}
 
+	flex: 8;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 
 	@include common.responsive-mobile-only() {
 		display: none;
-		flex: 0;
 	}
 }
 
@@ -101,7 +101,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	max-width: 60px;
+	width: 60px;
 	height: 100%;
 	box-sizing: border-box;
 	cursor: pointer;
@@ -114,41 +114,35 @@
 	}
 }
 
-.mobile-menu-links {
-	@include common.animations-transition-settings($property: height, $duration: 0.4s);
+.mobile-menu-expander {
+	margin: {
+		left: auto;
+	}
 
-	height: 0;
-	width: 100%;
-	overflow: hidden;
+	border-left: {
+		style: solid;
+		width: 0.5px;
+		color: common.$colors-low-black;
+	}
+
+	padding: {
+		left: 10px;
+		right: 10px;
+	}
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-wrap: wrap;
+	justify-self: flex-end;
+	width: 100px;
+	box-sizing: border-box;
+	cursor: pointer;
+	text-decoration: none;
+	color: common.$colors-slate-gray;
+	background-color: rgba(0 0 0 / 10%);
 
 	@include common.responsive-desktop-only() {
 		display: none;
-	}
-}
-
-.top-menu-expander {
-	margin: {
-		left: auto;
-		right: 25px;
-	}
-
-	text-align: right;
-
-	@include common.responsive-desktop-only() {
-		display: none;
-		width: 0;
-	}
-
-	@include common.responsive-portrait-mobile-only() {
-		flex: 1;
-	}
-
-	@include common.responsive-landscape-mobile-only() {
-		flex: 3;
 	}
 
 	& > svg {
@@ -156,9 +150,29 @@
 	}
 }
 
-.top-menu-link-slot {
+.mobile-menu-links {
+	@include common.animations-transition-settings($property: height, $duration: 0.4s);
+
+	border-top: {
+		width: 0.5px;
+		style: solid;
+		color: common.$colors-low-black;
+	}
+
+	height: 0;
+	width: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+
+	@include common.responsive-desktop-only() {
+		display: none;
+	}
+}
+
+.desktop-menu-link-slot {
 	margin: {
-		right: 15px;
+		right: 25px;
 	}
 
 	text-align: right;
@@ -180,6 +194,17 @@
 		width: 100%;
 		text-align: right;
 	}
+}
+
+.mobile-menu-link-slot {
+	margin: {
+		top: 20px;
+		bottom: 20px;
+		right: 25px;
+	}
+
+	width: 100%;
+	text-align: right;
 }
 
 .top-menu-link {
