Gallery page, cable page, and menus are fully operational. Just need to flesh out the last 3 product pages and we are set

--- a/public/styles/page/components.module.scss
+++ b/public/styles/page/components.module.scss
@@ -903,15 +903,17 @@
 }
 
 .galleria-image-outer-slot {
-	margin: 10px;
+	margin: {
+		top: 15px;
+		bottom: 15px;
+	}
+
 	display: flex;
 	justify-content: center;
 }
 
 .galleria-image-inner-slot {
-	object-fit: contain;
 	position: relative;
-	cursor: pointer;
 
 	@include common.responsive-desktop-only() {
 		width: 300px;
@@ -927,6 +929,11 @@
 		width: 150px;
 		height: 150px;
 	}
+
+	& > img {
+		object-fit: cover;
+		cursor: pointer;
+	}
 }
 
 .galleria-photo-index {
@@ -941,13 +948,13 @@
 	padding: {
 		top: 5px;
 		bottom: 5px;
-		left: 20px;
-		right: 20px;
+		left: 15px;
+		right: 15px;
 	}
 
 	position: absolute;
 	top: 5%;
-	left: 5%;
+	left: calc(100% - 50px);
 	z-index: 100;
 	color: common.$colors-black;
 	background-color: common.$colors-white;
