--- a/public/styles/page/productPage.module.scss
+++ b/public/styles/page/productPage.module.scss
@@ -49,8 +49,17 @@
 		text-shadow: 2px 2px 1px black;
 	}
 
+	padding: {
+		left: 20px;
+		right: 20px;
+		top: 5px;
+		bottom: 5px;
+	}
+
 	z-index: 1;
 	text-align: center;
+	width: 100%;
+	background-image: linear-gradient(to right, rgba(0 0 0 / 0%), rgba(0 0 0 / 65%), rgba(0 0 0 / 0%));
 }
 
 /* TODO - Figure out how to make product blocks fade onto the page once the user scrolls down to the point where it should be visible */
